set.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: unifi-set
  namespace: unifi-ns
spec:
  selector:
    matchLabels:
      app: unifi
  serviceName: "unifi-service"
  replicas: 1
  template:
    metadata:
      labels:
        app: unifi
    spec:
      containers:
      - name: unifi
        image: jacobalberty/unifi
        resources:
          requests:
            memory: "450Mi"
            cpu: "10m"
          limits:
            memory: "1Gi"
            cpu: "250m"
        volumeMounts:
        - name: unifi-pvc
          mountPath: /unifi
        ports:
        - containerPort: 6789
          name: ubnt-6789
          protocol: TCP
        - containerPort: 8080
          name: ubnt-8080
          protocol: TCP
        - containerPort: 8443
          name: ubnt-8443
          protocol: TCP
        - containerPort: 3478
          name: ubnt-3478
          protocol: UDP
        - containerPort: 8881
          name: ubnt-8881
          protocol: TCP
        - containerPort: 8882
          name: ubnt-8882
          protocol: TCP
        - containerPort: 10001
          name: ubnt-10001
          protocol: UDP      
  volumeClaimTemplates:
  - metadata:
      name: unifi-pvc
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
      storageClassName: do-block-storage
