service.yml
apiVersion: v1
kind: Service
metadata:
  name: unifi-home-service
spec:
  selector:
    app: unifi-home
  ports:
    - protocol: TCP
      name: https
      port: 443 # Default port for image
      targetPort: 8443
