ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi-home-ingress
spec:
  tls:
  - hosts:
    - unifi.home.hlads.net
    secretName: unifi-home-tls
  rules:
  - host: unifi.home.hlads.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: unifi-home-service
            port:
              number: 80
